--- a/docker-example-ui/src/app/app.component.html
+++ b/docker-example-ui/src/app/app.component.html
@@ -1,17 +1,23 @@
 
   <h1>Devon's Meal Planner</h1>
 
-  <form>
-    <select name="dow" id="dow">
-        <option *ngFor="let day of daysOfWeek; index as i">
+  <form [formGroup]="mealForm" (submit)="onSubmit()">
+    <select name="dow" id="dow" formControlName="dow">
+        <option *ngFor="let day of daysOfWeek" [value]="day">
             {{ day }}
         </option>
     </select>
-    <select name="meal" id="meal">
-        <option *ngFor="let meal of meals; index as i">
+    <select name="meal" id="meal" formControlName="meal">
+        <option *ngFor="let meal of meals" [value]="meal">
             {{ meal }}
         </option>
     </select>
-    <input type="text">
+    <input type="text" formControlName="mealName">
     <button type="submit">Submit</button>
   </form>
+
+  <ul>
+    <li *ngFor="let meal of mealPlan">
+        {{ meal.dow }} {{ meal.meal }} {{ meal.mealName }}
+    </li>
+  </ul>
