--- a/docker-example-ui/src/app/app.component.html
+++ b/docker-example-ui/src/app/app.component.html
@@ -17,8 +17,8 @@
   </form>
 
   <ul>
-    <li *ngFor="let meal of mealPlan$ | async">
-        {{ meal.dow }} {{ meal.meal }} {{ meal.mealPlan }}
+    <li *ngFor="let meal of mealPlan">
+        {{ meal.dow }} {{ meal.meal }} {{ meal.meal_name }}
         <button (click)="onDelete(meal.id)">Delete</button>
     </li>
   </ul>
