--- a/docker-example-ui/src/styles.css
+++ b/docker-example-ui/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f5f5f5;
+    font-family: arial; /* Change the background color as needed */
+  }
